<resources>
    <string name="app_name">The Student Room</string>
    <string name="button">Login</string>
    <string name="button2">Dont have an account?Sign up</string>
    <string name="textView4">The Student Room</string>
    <string name="button3">register</string>
    <string name="textView6">main menu</string>
    <string name="email_et">email</string>
    <string name="username_et">username</string>
    <string name="reg_tv">Register</string>
    <string name="password_et">password</string>
    <string name="cpassword_et">confirm password</string>
    <string name="attempts_tv">Attempts:</string>
    <string name="login_tv">Login</string>
    <string name="username_hint">Username</string>
    <string name="passwordHint_et">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="buttonclick">View students results</string>
    <string name="createModBtn">Create Module</string>
    <string name="moduleET">Module</string>
    <string name="createModuleTV">Create a module</string>
    <string name="createBtn">Create Module</string>
    <string name="mainMenuTV">Main Menu</string>
    <string name="assignedModBtn">Modules Library</string>
    <string name="getAverageBtn">Calculate Average</string>
    <string name="enterGradesTV">Enter your grades</string>
    <string name="calcBtn">Calculate</string>
    <string name="resultTV">result</string>
    <string name="weightTV">Weight</string>
    <string name="gradeTV">grade (%)</string>
    <string name="emailLogET">Email</string>
    <string name="myModsTV">My Modules</string>
    <string name="no1">0</string>
    <string name="no2">0</string>
    <string name="weight2ET">0</string>
    <string name="gradeTv">grade (%)</string>
    <string name="no3">0</string>
    <string name="no4">0</string>
    <string name="weight1ET">0</string>
    <string name="weight3ET">0</string>
    <string name="weight4ET">0</string>
    <string name="btn_add_room">Add Room</string>
    <string name="instantMsg">Instant Messaging</string>
    <string name="btn_send">Send</string>
</resources>
